# PIPIT_WEB

./: README.md
drf-practice-portfolio/: README.md  manage.py  pyproject.toml
drf-practice-portfolio/api/models/users/: models.py
drf-practice-portfolio/api/models/users/migrations/: 0001_initial.py  0002_alter_user_birth_date_alter_user_ci_and_more.py
drf-practice-portfolio/api/versions/v1/users/: serializers.py  urls.py  viewsets.py
drf-practice-portfolio/common/: environments.py  mixins.py  models.py  statics.py
drf-practice-portfolio/practice/: urls.py
drf-practice-portfolio/practice/settings/: base.py  development.py  production.py  secrets.json
